--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,5 +5,5 @@ EnableErrorsRender = false
 AutoRender = false
 
 [mongodb]
-url = mongodb://beemongo:beemongo@127.0.0.1:27017,127.0.0.1:27018,127.0.0.1:27019,127.0.0.1:27020/beemongo
+url = mongodb://beemongo:beemongo@127.0.0.1:27017,127.0.0.1:27018,127.0.0.1:27019,127.0.0.1:27020/beemongo?replicaSet=rs0
 db = beemongo
